👌 IMPROVE: Click gone text

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <p>This is another paragraph.</p>
 
     <button id="button3">Hide test class elements</button>
+    <p class="clickgone">If you click on me, I will disappear.</p>
+    <p class="clickgone">Click me away!</p>
+    <p class="clickgone">Click me too!</p>
   </body>
 </html>
