👌 IMPROVE: More jQuery functions

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
     <p>This is another paragraph.</p>
 
     <button id="button3">Hide test class elements</button>
+
     <p class="clickgone">If you click on me, I will disappear.</p>
-    <p class="clickgone">Click me away!</p>
-    <p class="clickgone">Click me too!</p>
+    <p class="click2gone">If you double-click on me, I will disappear.</p>
+
+    <p id="p1">Enter this paragraph.</p>
+    <p id="p2">Leave this paragraph.</p>
+
+    <button id="showhide">Hide/Show text below</button>
+
+    <p class="showhidetext">This is a paragraph with little content.</p>
+    <p class="showhidetext">This is another small paragraph.</p>
   </body>
 </html>
