👌 IMPROVE: More jQuery practice

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="my_jquery_functions.js"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h2>This is a heading</h2>
@@ -36,5 +37,25 @@
 
     <p class="showhidetext">This is a paragraph with little content.</p>
     <p class="showhidetext">This is another small paragraph.</p>
+
+    <div id="flip">Click to slide down panel</div>
+    <div id="panel">Hello world!</div>
+    <br /><br />
+    <button id="fadeto">Fade boxes below</button><br /><br />
+
+    <div
+      id="divfade1"
+      style="width: 80px; height: 80px; background-color: red"
+    ></div>
+    <br />
+    <div
+      id="divfade2"
+      style="width: 80px; height: 80px; background-color: green"
+    ></div>
+    <br />
+    <div
+      id="divfade3"
+      style="width: 80px; height: 80px; background-color: blue"
+    ></div>
   </body>
 </html>
