--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="my_jquery_functions.js"></script>
+    <script src="/js/my_jquery_functions.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
